Adding API to database

--- a/cources/udemy-react-go/backend-app/Readme.me
+++ b/cources/udemy-react-go/backend-app/Readme.me
@@ -12,7 +12,8 @@ Notes
 11. download package to connect to postgres go get -u github.com/lib/pq@v1.10.0
 12. run postgres container docker run --name postgres12 -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=secret -d postgres:12-alpine
 13. C:\Users\Inspiron\AppData\Local\Programs\pgAdmin 4\v6\runtime\psql -d go_movies -f G:\2022\cources\udemy-react-go\backend-app\go_movies.sql -U root
-
+14. Adding database specific operations
+15. Add CORS middleware
 
 
 commands
